<resources>
    <string name="app_name">GEZ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- ## Buttons ## -->
    <!--Menu buttons content description-->
    <string name="airplane_button_menu_desc">Airplane Button</string>
    <string name="hotel_button_menu_desc">Airplane Button</string>
    <string name="cars_button_menu_desc">Airplane Button</string>
    <string name="lowcost_button_menu_desc">Airplane Button</string>
    <string name="train_button_menu_desc">Airplane Button</string>
    <string name="transfer_button_menu_desc">Airplane Button</string>
    <string name="insurance_button_menu_desc">Airplane Button</string>
    <string name="visa_button_menu_desc">Airplane Button</string>
    <string name="cruize_button_menu_desc">Airplane Button</string>

    <string name="preview_image_desc">Preview image</string>
    <string name="clocks_image_desc">Clocks kimage</string>
    <!-- /////////////// -->
    <string name="oneStop">1 Stop</string>
    <string name="onePlusStop">2+ Stop</string>
    <!--Radio buttons and Check Boxes-->
    <string name="roundTrip">Round Trip</string>
    <string name="oneWay">One Way</string>
    <string name="multiCity">Multi-City</string>
    <string name="addFlight">Add flight</string>
    <string name="addCar">Add car</string>
    <string name="addTransfer">Add transfer</string>
    <string name="pickingUp">Picking Up</string>
    <string name="pickDate">Picking Up Date</string>
    <string name="time">Time</string>
    <string name="droppingOff">Dropping Off</string>
    <string name="dropDate">Dropping Off Date</string>
    <string name="sameAsPickUp">Same as pick up</string>
    <string name="babyOnBoard">Baby on board</string>

    <!-- /////////////// -->


    <!--Spinner for children\adults entries-->
    <string-array name="spinner_how_many_ppl">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="spinner_how_many_chld">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="spinner_price">
        <item>Price(Lowest)</item>
        <item>Price(Highest)</item>
    </string-array>
    <!-- /////////////// -->

    <!--Spinner for price filter-->
    <string-array name="spinner_price_filter">
        <item>Price(Lowest)</item>
        <item>Price(Highest)</item>
    </string-array>
    <!-- /////////////// -->

    <!--Labels-->
    <string name="fromLabel">From</string>
    <string name="toLabel">To</string>
    <string name="departLabel">Depart</string>
    <string name="adultLabel">Adult</string>
    <string name="childLabel">Children</string>
    <string name="addHotelLabel">Add Hotel</string>
    <string name="arrivalLabel">Arrival</string>
    <string name="returnLabel">Return</string>
    <string name="goingTo">Going To</string>
    <string name="checkIn">Check-In</string>
    <string name="checkOut">Check-Out</string>
    <string name="rooms">Rooms</string>
    <string name="typeOfCar">Type of Car</string>
    <string name="arrivalTime">Arrival Time</string>

    <string name="arrivalDate">Arrival Date</string>
    <string name="passangers">Passangers</string>
    <string name="transInfo">Transferring information</string>
    <string name="travelFromCity">%1$s, \n %2$s, \n %3$s</string>
    <string name="travelToCity">%1$s, \n %2$s, \n %3$s</string>
    <string name="travelWhereTo">1.69 miles from center of Barcelona</string>
    <string name="travelWhereFrom">1.69 miles from center of Barcelona</string>

    <string name="transferTo">Transfer To</string>
    <string name="transferFrom">Transfer from</string>
    <string name="hotelName">Serennia Hotel Rooms</string>
    <string name="hotelLocation">%1$s, %2$s, %3$s, %4$s, %5$s</string>
    <string name="counterHotel">We have %1$s left at</string>
    <string name="location">Location</string>
    <string name="roomAmenities">Room Amenities</string>
    <string name="pointsOfInterest">Points Of Interest</string>
    <string name="chooseAccom">Choose your Accommodation</string>

    <string name="roomSize">160 square feet</string>
    <string name="roomProperty">1 twin bed</string>

    <string name="fromDate">From \n %1$s</string>
    <string name="carPrice">995$ \n total</string>

    <string name="rentText">16 people have booked a car in BEV on GEZ.lv in the last 24 hours</string>
    <string name="rateUS">Rates are quoted in US dollars. You will pay EUR 116.06 at the rental counter.</string>

    <string name="login">Login</string>
    <string name="password">Password</string>


    <!-- /////////////// -->

    <!--Place Holders-->
    <string name="fromPlaceHolder">Baku, GYD</string>
    <string name="toPlaceHolder">Milan, XRP</string>
    <string name="departPlaceHolder">11.02.17</string>
    <string name="returnPlaceHolder">17.02.17</string>
    <string name="adultSpinnerPlaceHolder">1</string>
    <string name="childSpinnerPlaceHolder">1</string>

    <string name="classTypePlaceHolder">Class type</string>
    <string name="datePlaceHolder">%1$s, %2$s</string>
    <string name="roadTimePlaceHolder">%1$d h\ %2$d m</string>
    <string name="airwayName">%1$d \n %2$d</string>

    <string name="flightTime">%1$d h %2$d m \ %3%s</string>
    <string name="flightDate">%1$s, %2$s</string>
    <string name="flightDepartAirport">GYD</string>
    <string name="flightArrivalAirport">MXP</string>
    <string name="flightArrivalTime">%1$s</string>
    <string name="flightDepartTime">%1$s</string>
    <string name="flightBagFees">Bag Fees</string>
    <string name="baggageFees">Baggage fees when purchase at the airport</string>
    <string name="baggageCarry">Carry On: No fee</string>
    <string name="baggageInfo">Baggage Information: AZAL</string>
    <string name="firstBag">1st checked bag:%1$s </string>
    <string name="marketingAirline">Marketing Airline:%1$s </string>
    <string name="flightNumber">Flight number:%1$s </string>


    <string name="pricePlaceHolder">%1$s$</string>
    <string name="arrivalStationPlaceHolder">Arrival PH</string>
    <string name="departStationPlaceHolder">Depart PH</string>
    <string name="arrivalDatePlaceHolder">03:00</string>
    <string name="departDatePlaceHolder">00:00</string>
    <string name="counterAmountLeft">1 left at \n +44$</string>
    <string name="hotelProperty">%1$d \n $2%s</string>
    <string name="typePlaceHolder">Type</string>
    <string name="protect">Protect your trip</string>
    <string name="protectRadio">Yes, I need collision protection</string>

    <string name="insurance">Pays up 35$. Now with $0 deductible. /n Covers rental car damage from collision, theft orvandalism.</string>
    <!-- /////////////// -->

    <!--Buttons-->
    <string name="searchButton">Search</string>
    <string name="selectButton">SELECT</string>
    <string name="reserve">Reserve</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="firstFlight">FIRST FLY ROUTE</string>
    <string name="secondFlight">SECOND FLY ROUTE</string>
    <string name="thirdFlight">THIRD FLY ROUTE</string>
    <string name="forthFlight">FORTH FLY ROUTE</string>
    <string name="fifthFlight">FIFTH FLY ROUTE</string>


    <string name="profile">Account Settings</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="logout">Sign Out</string>
    <string name="bonus">Bonus</string>
    <string name="send">SEND</string>

    <string name="contacts">Contacts</string>

    <string name="saveChanges">SAVE CHANGES</string>
    <string name="continueBooking">CONTINUE BOOKING</string>
    <string name="changePassword">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="retypePassword">Retype Password</string>
    <string name="name">Name</string>
    <string name="nameAndSurname">Name and Surname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="yourText">Your Text</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="passport">Passport №</string>
    <string name="surname">Surname</string>
    <string name="email">Mail Address</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <!-- /////////////// -->

</resources>
