<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_fragments.SupportFragment"
    android:background="#ededed">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/support"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView77"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/nameAndSurname"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/draw_edit_text_background"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/draw_edit_text_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView79"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/phoneNumber"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/draw_edit_text_background"
                android:ems="10"
                android:inputType="phone"
                android:padding="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/yourText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/draw_edit_text_background"
                android:ems="10"
                android:gravity="top"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/search_button_background"
                android:padding="15dp"
                android:text="@string/send"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>